# Web-Crawler

./: .gitignore  CMakeLists.txt  README.md  links_to_parse.txt  out.txt
dependencies/: TF_IDF.cpp  TF_IDF.h
dependencies/concurrancy_helpers/: Task.h  function_wrapper.h  map_manipulation.cpp  map_manipulation.h
dependencies/reader/: file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  reader.cpp  reader.h
parser/: CMakeLists.txt  README.md  main.cpp
src/: domain_parser.cpp  domain_parser.h  main.cpp
src/parser/: domain_parser.cpp  parser.cpp
src/searcher/: searcher.cpp
